[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/inimigos/lava.gd" type="Script" id=1]
[ext_resource path="res://sprites/efeitos_jogo/lava/4.png" type="Texture" id=2]
[ext_resource path="res://sprites/efeitos_jogo/lava/2.png" type="Texture" id=3]
[ext_resource path="res://sprites/efeitos_jogo/lava/1.png" type="Texture" id=4]
[ext_resource path="res://sprites/efeitos_jogo/lava/3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.47082, 6.64766 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48.5, 8.65204 )

[node name="lava" type="KinematicBody2D"]
z_index = -1
collision_layer = 128
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.3 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
light_mask = 32
position = Vector2( -0.220818, 6.08224 )
shape = SubResource( 2 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.574524, 0.928074 )
scale = Vector2( 0.535961, 0.429895 )

[node name="colidir_com_player" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="colidir_com_player"]
visible = false
position = Vector2( 0, 3.10243 )
z_index = 1
shape = SubResource( 3 )

[node name="varios_danos" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="body_entered" from="colidir_com_player" to="." method="_on_enemy_body_entered"]
